# webreg_scraper

./: .gitignore  Cargo.toml  README.md  Rocket.toml  config.example.json  cookie.example.txt
.github/workflows/: release.yml  rust.yml
authmanager/: Cargo.toml
crates/authmanager/: Cargo.toml  README.md
crates/authmanager/src/: main.rs  types.rs
crates/basicauth/: Cargo.toml
crates/basicauth/src/: lib.rs
crates/basicauth/tests/: auth_test.rs
crates/webreg/: Cargo.toml  README.md  config.example.json
crates/webreg/src/: main.rs  types.rs
crates/webreg/src/scraper/: tracker.rs
crates/webreg/src/server/: mod.rs  types.rs  util.rs
crates/webreg/src/server/endpoints/: mod.rs  status.rs  ww_cookies.rs  ww_general.rs
crates/webreg/src/server/middleware/: auth_validator.rs  cookie_validator.rs  mod.rs  running_validator.rs  term_validator.rs
helpers/webregautoin/: README.md  package.json
helpers/webregautoin/src/: fns.ts
misc/: .gitignore  enroll_data_cleaner.py  fix_inconsistent_times.py
misc/data_processing/: clean.sh  enroll_data_cleaner.py  find_biggest_diff.py
misc/http_api/: .gitignore  tsconfig.json
misc/http_api/src/: index.ts
notifierbot/: .gitignore  config.example.json  package-lock.json  package.json
notifierbot/src/: index.ts  util.ts
scripts/notifierbot/: README.md  config.example.json  package-lock.json  package.json
scripts/notifierbot/src/: index.ts  util.ts
scripts/webregautoin/: README.md  credentials.sample.json  credentials.sample_push.json  credentials.sample_sms.json  package-lock.json  package.json
scripts/webregautoin/src/: fns.ts  index.ts  types.ts
setup/: README.md  nginx.conf  setup.sh
sql/: delete_by_prefix.sql  edit_desc_by_prefix.sql  get_all_entries.sql  get_by_prefix.sql  init_table.sql  insert_table.sql
src/: git.rs  main.rs  tests.rs  tracker.rs  types.rs  util.rs
src/api/: mod.rs  status_api.rs  util.rs  webreg_api.rs
src/export/: exporter.rs  mod.rs
src/schedule/: helper.rs  mod.rs  scheduler.rs
src/scraper/: mod.rs  tracker.rs
src/server/: auth.rs  mod.rs
src/server/endpoints/: mod.rs  status.rs  ww_general.rs
src/server/middleware/: mod.rs
src/tracker/: mod.rs  track.rs
src/webreg/: mod.rs  webreg.rs  webreg_clean_defn.rs  webreg_helper.rs  webreg_raw_defn.rs  webreg_wrapper.rs
webreg/: Cargo.toml
webreg/src/server/: auth.rs  mod.rs  types.rs
webreg/src/server/middleware/: auth_validator.rs  term_validator.rs
webregautoin/: README.md  package-lock.json  package.json
webregautoin/src/: index.ts
