[package]
name = "webreg_scraper"
version = "0.5.0"
authors = ["Edward Wang"]
edition = "2021"
description = "A scraper and/or API for UC San Diego's WebReg enrollment system."
repository = "https://github.com/ewang2002/webreg_scraper"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.20"
chrono = "0.4.19"
futures = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webweg = { git = "https://github.com/ewang2002/webweg.git", branch = "refactor/no-default-term", features = ["multi"] }

[dev-dependencies]
axum-macros = "0.3.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
