[package]
name = "webreg_scraper"
version = "0.5.0"
authors = ["Edward Wang"]
edition = "2021"
description = "A scraper and/or API for UC San Diego's WebReg enrollment system."
repository = "https://github.com/ewang2002/webreg_scraper"

[dependencies]
anyhow = "1.0"
axum = "0.6"
chrono = "0.4"
futures = "0.3"
reqwest = "0.11"
rusqlite = { version = "0.29", features = ["bundled", "chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "fast-rng"], optional = true }
webweg = { version = "0.9", features = ["multi"] }

[dev-dependencies]
axum-macros = "0.3.0"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[features]
default = []
auth = ["dep:rusqlite", "dep:uuid"]