[package]
name = "basicauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }
