[package]
name = "webreg"
version = "0.5.0-rc.5"
authors = ["Edward Wang"]
edition = "2021"
description = "A scraper and API for UC San Diego's WebReg enrollment system."
repository = "https://github.com/ewang2002/webreg_scraper"

[dependencies]
anyhow = "1.0"
axum = "0.6"
chrono = "0.4"
futures = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# webweg = { version = "0.9", features = ["multi"] }
webweg = { git = "https://github.com/ewang2002/webweg.git", branch = "feat/new-endpoints", features = ["multi"] }
basicauth = { path = "../basicauth", optional = true }

[dev-dependencies]
axum-macros = "0.3.0"

[features]
default = []
auth = ["dep:basicauth"]